--- a/submissionii.Rmd
+++ b/submissionii.Rmd
@@ -29,7 +29,7 @@ final_df <- readRDS("data/final.rds")
 
 ### Data
 
-|        As a basis for this study, I will be using the same dataset that VICE News used. This dataset contains data on officer-involved shootings from 47 of the largest local police departments in America, and more specifically, “information on 4,117 incidents and 4,400 subjects [(victims)] over seven years.” [1] VICE News provides 34 variables in the dataset, including dates ranging from January 2010 to September 2016, city, subject race, subject gender, office race, officer gender, the type of weapon the subject was carrying, and whether the shooting was fatal or not. Race was broken up into 5 categories: White (non-Hispanic) (represented as W), Black (non-Hispanic) (B), Asian (A), Latino (L), Other (O), and Unknown (U). Gender was broken up into 3 categories: Male (M), Female (F), and Unknown (U). Weapon type was broken up into 6 values: "gun", "knife", "replica", "other", "unknown", and "other". Additionally, there were cases in which multiple victims and/or multiple officers were present in the shooting. Each of these scenarios was still represented within one row of the dataset, but semi-colons were present in the respective victim and officer columns, separating each individual's information from each other.
+|        As a basis for this study, I will be using the same dataset that VICE News used. This dataset contains data on officer-involved shootings from 47 of the largest local police departments in America, and more specifically, “information on 4,117 incidents and 4,400 subjects [(victims)] over seven years.” [1] VICE News provides 34 variables in the dataset, including dates ranging from January 2010 to September 2016, 47 unique cities, subject race, subject gender, office race, officer gender, the type of weapon the subject was carrying, and whether the shooting was fatal or not. Race was broken up into 5 categories: White (non-Hispanic) (represented as W), Black (non-Hispanic) (B), Asian (A), Latino (L), Other (O), and Unknown (U). Gender was broken up into 3 categories: Male (M), Female (F), and Unknown (U). Weapon type was broken up into 6 values: "gun", "knife", "replica", "other", "unknown", and "other". Additionally, there were cases in which multiple victims and/or multiple officers were present in the shooting. Each of these scenarios was still represented within one row of the dataset, but semi-colons were present in the respective victim and officer columns, separating each individual's information from each other.
 |       Additionally, to assess the effect of different types of legislation on fatal vs. non-fatal police shootings in various states, I will be using a dataset from Kaggle containing 135 variables that detail whether a certain gun provision is absent or present in a certain year and U.S. state for 133 different gun provisions. The years range from 1991 to 2017, and the gun provisions address 14 categories, some of which are dealer regulations, buyer regulations, prohibitions for high-risk gun possession, background checks, ammunition regulations, possession regulations, concealed carry permitting, assault weapons and large-capacity magazines, child access prevention, gun trafficking, and domestic violence. A 1 in the gun provision column represents a presence of the law, and a 0 indicates an absence. I will also add a column to this gun provision dataset indicating whether a state requires de-escalation training based off of information reported by APM Report in 2017, with a 1 meaning the state does require training and a 0 meaning the state does not. There were 16 states that required de-escalation training as of November 2017. [4] 
 |       Finally, to examine city demographics as a predictor, I will be using population data from the 2013 American Community Survey that VICE News had already cleaned and standardized to the shootings dataset, meaning the city names can be matched up between the two datasets. VICE News most likely provided only 2013 census data because it is the average year of all the years represented in the shootings dataset. Furthermore, using census data only from 2013 requires that we analyze this data under the assumption that there is no drastic difference in population demographics between 2010 and 2016. The census data includes 7 variables: the police department and the city it's located in, as well as the city's Black, Asian, Hispanic, White, and overall total population in 2013. 
 
@@ -76,21 +76,34 @@ knitr::include_graphics("figures/singleeda2.png")
 
 |        Because I want to explore the relationship between the number of victims in a police shooting affects and whether the shooting is fatal or not, I decided to create two separate models: one for shootings with only one victim, and one for shootings with multiple victims. Both models are fixed effect logistic regression models because the range that the response variable can take in logistic regression is the most reasonable given that I am predicting whether a victim is shot fatally or not (labeled 1 and 0, respectively). From the Exploratory Data Analysis section, it is evident that victim race plays a significant role in whether the shooting is fatal or not. Thus, for both models, I started with a simple logistic regression model using only victim race as a predictor. From there, I began adding the other predictors that I wanted to explore one at a time and kept an eye on the p-values of all predictors to make sure they all remained significant. Additionally, I performed likelihood ratio tests with each new model iteration to check that the added variable improves the older model. 
 |        The final model for single-victim shootings is written out below:
+```{r, eval = F}
+fit9 <- glm(formula = fatal ~ SubjectRace + I(black/city_pop_2013) + ob + ow + ol + ow:SubjectRace + SubjectArmed, family = binomial, data=single_victims)
+```
+
 \begin{center}
 $$
-log(\frac{p_i}{(1-p_i)}) = \beta_0 + \beta_1\ muEDA_i + \beta_2\ sdEDA_i + \beta_3\ muEDA_i:sdEDA_i + \beta_4\ muTemp_i + \beta_5\ sdTemp_i + \beta_6\ muEMG_i
+log(\frac{p_i}{(1-p_i)}) = \beta_0 + \sum_{j=1}^{4} \beta_{j} I(SubjectRace_i = SubjectRace[j]) +
 $$
 $$
-+ \beta_7\ sdEMG_i + \beta_8\ muACC\_Y_i + \beta_9\ sdACC\_Y_i + \beta_{10}\ muACC\_Y_i:muEDA_i + \beta_{11}\ muEDA_i:muTemp_i
+\sum_{j=5}^{8}  \beta_{j} black\_officer\_present_i * I(SubjectRace_i = SubjectRace[j-4]) + \beta_9\ (\frac{black_i}{city\_pop_i}) +
+$$
+$$
+\beta_{10}\ black\_officer\_present_i + \beta_{11}\ white\_officer\_present_i + \beta_{12}\ latino\_officer\_present_i + \beta_{13} victim\_armed\_gun
+$$
+$$
+SubjectRace = [\text{Black, Latino, Other, White}]
 $$
 \end{center}
-|        The final model for multiple-victim shootings written out below:
+|        The final model for multiple-victim shootings is written out below:
 \begin{center}
 $$
-log(\frac{p_i}{(1-p_i)}) = \beta_0 + \beta_1\ muEDA_i + \beta_2\ sdEDA_i + \beta_3\ muEDA_i:sdEDA_i + \beta_4\ muTemp_i + \beta_5\ sdTemp_i + \beta_6\ muEMG_i
+log(\frac{p_i}{(1-p_i)}) = \beta_0 + \beta_1\ black\_victim\_present_i + \beta_2\ white\_victim\_present_i +  \beta_3\ latino\_victmi\_present_i + \beta_4\ (\frac{black_i}{city\_pop_i}) +
 $$
 $$
-+ \beta_7\ sdEMG_i + \beta_8\ muACC\_Y_i + \beta_9\ sdACC\_Y_i + \beta_{10}\ muACC\_Y_i:muEDA_i + \beta_{11}\ muEDA_i:muTemp_i
+\beta_{5}\ black\_officer\_present_i + \beta_{6}\ white\_officer\_present_i + \beta_{7}\ latino\_officer\_present_i
+$$
+$$
++ \beta_{8} victim\_armed\_gun + \beta_{9} victim\_armed\_gun
 $$
 \end{center}
 
@@ -98,12 +111,12 @@ $$
 ## III. Preliminary Results
 
 ### Analysis Plan
-
-|        For sensitivity analysis, I plan to perform cross-validation on the dataset by holding out 10% of the data to use as a test set and training my models on the other 90% of the data as a way to assess prediction accuracy. 
+|        Preliminarily, it appears that none of the legislation variables were significant in predicting whether one was shot fatally or not, and thus were not included in either of the models. 
+|        For sensitivity analysis, I plan to perform cross-validation on the dataset by holding out 10% of the data to use as a test set and training my models on the other 90% of the data as a way to assess prediction accuracy. For model diagnostics, I will plot binned residual plots and ROC curves to assess how well my models fit the data.
 
 ### Strengths and Limitations
-|        There are several limitations to this study. For example, the VICE News dataset spans over the years 2010 to 2016, and neither of my models will be exploring time series data whatsoever. Thus, the aspect of time may be playing some sort of effect on my response variable that I am not accurately capturing in my models. Additionally, when cleaning the data, there were several "Unknown" values in the fatality column. Unknown values were assumed to represent "No" in this study, although this may not necessarily be true, to allow for more straightforward cleaning of the data and not lose too many observations in the data. Finally, there were less than 200 cases in which there were multiple victims in my final dataset, which is a relatively small sample size. 
-- limitations: time series, also counting N;U... combos as N even though some are unknown
+|        There are several limitations to this study. For example, the VICE News dataset spans over the years 2010 to 2016, and neither of my models will be exploring time series data whatsoever. Thus, the aspect of time may be playing some sort of effect on my response variable that I am not accurately capturing in my models. Additionally, when cleaning the data, there were several "Unknown" values in the fatality column. Unknown values were assumed to represent "No" in this study, although this may not necessarily be true, to allow for more straightforward cleaning of the data and not lose too many observations in the data. Finally, there were less than 200 cases in which there were multiple victims in my final dataset, which is a relatively small sample size. Thus, it may be necessary to take the results from the multiple-victim model with a grain of salt.
+
 
 ## References 
 1) Vice 
